Updated coins.plist format

--- a/coins.plist
+++ b/coins.plist
@@ -3,17 +3,500 @@
 <plist version="1.0">
 <dict>
 	<key>updated</key>
-	<date>2017-06-28T00:39:34Z</date>
-	<key>coins</key>
-	<array>
+	<date>2017-06-28T02:00:00Z</date>
+	<key>markets</key>
+	<dict>
+		<key>Korbit</key>
 		<dict>
-			<key>coin</key>
-			<string>BTC</string>
+			<key>tag</key>
+			<integer>1</integer>
+			<key>currency</key>
+			<string>KRW</string>
+			<key>api</key>
+			<dict>
+				<key>url</key>
+				<string>https://api.korbit.co.kr/v1/ticker?currency_pair=</string>
+				<key>start</key>
+				<string></string>
+				<key>last</key>
+				<string>last</string>
+				<key>change</key>
+				<string></string>
+			</dict>
+			<key>isCombination</key>
+			<false/>
+			<key>isBtcMarket</key>
+			<false/>
+		</dict>
+		<key>Bithumb</key>
+		<dict>
+			<key>tag</key>
+			<integer>2</integer>
+			<key>currency</key>
+			<string>KRW</string>
+			<key>api</key>
+			<dict>
+				<key>url</key>
+				<string>https://api.bithumb.com/public/ticker/</string>
+				<key>first</key>
+				<string>data.opening_price</string>
+				<key>last</key>
+				<string>data.closing_price</string>
+				<key>change</key>
+				<string></string>
+			</dict>
+			<key>isCombination</key>
+			<false/>
+			<key>isBtcMarket</key>
+			<false/>
+		</dict>
+		<key>Coinone</key>
+		<dict>
+			<key>tag</key>
+			<integer>3</integer>
+			<key>currency</key>
+			<string>KRW</string>
+			<key>api</key>
+			<dict>
+				<key>url</key>
+				<string>https://api.coinone.co.kr/ticker/?currency=</string>
+				<key>first</key>
+				<string>first</string>
+				<key>last</key>
+				<string>last</string>
+				<key>change</key>
+				<string></string>
+			</dict>
+			<key>isCombination</key>
+			<false/>
+			<key>isBtcMarket</key>
+			<false/>
+		</dict>
+		<key>Poloniex</key>
+		<dict>
+			<key>tag</key>
+			<integer>10</integer>
+			<key>currency</key>
+			<string>USD</string>
+			<key>api</key>
+			<dict>
+				<key>url</key>
+				<string>https://poloniex.com/public?command=returnTicker</string>
+				<key>first</key>
+				<string></string>
+				<key>last</key>
+				<string>last</string>
+				<key>change</key>
+				<string>percentChange</string>
+			</dict>
+			<key>isCombination</key>
+			<true/>
+			<key>isBtcMarket</key>
+			<true/>
+		</dict>
+		<key>Bittrex</key>
+		<dict>
+			<key>tag</key>
+			<integer>11</integer>
+			<key>currency</key>
+			<string>USD</string>
+			<key>api</key>
+			<dict>
+				<key>url</key>
+				<string>https://bittrex.com/api/v1.1/public/getmarketsummary?market=</string>
+				<key>first</key>
+				<string>result.0.PrevDay</string>
+				<key>last</key>
+				<string>result.0.Last</string>
+				<key>change</key>
+				<string></string>
+			</dict>
+			<key>isCombination</key>
+			<false/>
+			<key>isBtcMarket</key>
+			<true/>
+		</dict>
+		<key>Coincheck</key>
+		<dict>
+			<key>tag</key>
+			<integer>20</integer>
+			<key>currency</key>
+			<string>JPY</string>
+			<key>api</key>
+			<dict>
+				<key>url</key>
+				<string>https://coincheck.com/api/rate/</string>
+				<key>first</key>
+				<string></string>
+				<key>last</key>
+				<string>rate</string>
+				<key>change</key>
+				<string></string>
+			</dict>
+			<key>isCombination</key>
+			<false/>
+			<key>isBtcMarket</key>
+			<true/>
+		</dict>
+		<key>Bitflyer</key>
+		<dict>
+			<key>tag</key>
+			<integer>21</integer>
+			<key>currency</key>
+			<string>JPY</string>
+			<key>api</key>
+			<dict>
+				<key>url</key>
+				<string>https://api.bitflyer.jp/v1/ticker/?product_code=</string>
+				<key>first</key>
+				<string></string>
+				<key>last</key>
+				<string>ltp</string>
+				<key>change</key>
+				<string></string>
+			</dict>
+			<key>isCombination</key>
+			<false/>
+			<key>isBtcMarket</key>
+			<true/>
+		</dict>
+		<key>Okcoin</key>
+		<dict>
+			<key>tag</key>
+			<integer>30</integer>
+			<key>currency</key>
+			<string>CNY</string>
+			<key>api</key>
+			<dict>
+				<key>url</key>
+				<string>https://www.okcoin.cn/api/v1/ticker.do?symbol=</string>
+				<key>first</key>
+				<string></string>
+				<key>last</key>
+				<string>ticker.last</string>
+				<key>change</key>
+				<string></string>
+			</dict>
+			<key>isCombination</key>
+			<false/>
+			<key>isBtcMarket</key>
+			<false/>
+		</dict>
+	</dict>
+	<key>coins</key>
+	<dict>
+		<key>BTC</key>
+		<dict>
+			<key>tag</key>
+			<integer>1</integer>
 			<key>name</key>
 			<string>Bitcoin</string>
 			<key>mark</key>
-			<string>\u{e9a7}</string>
+			<string>e9a7</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Korbit</key>
+				<string>btc_krw</string>
+				<key>Bithumb</key>
+				<string>btc</string>
+				<key>Coinone</key>
+				<string>btc</string>
+				<key>Poloniex</key>
+				<string>USDT_BTC</string>
+				<key>Bittrex</key>
+				<string>USDT-BTC</string>
+				<key>Coincheck</key>
+				<string>btc_jpy</string>
+				<key>Bitflyer</key>
+				<string>BTC_JPY</string>
+				<key>Okcoin</key>
+				<string>btc_cny</string>
+			</dict>
 		</dict>
-	</array>
+		<key>ETH</key>
+		<dict>
+			<key>tag</key>
+			<integer>2</integer>
+			<key>name</key>
+			<string>Ethereum</string>
+			<key>mark</key>
+			<string>e9c4</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Korbit</key>
+				<string>eth_krw</string>
+				<key>Bithumb</key>
+				<string>eth</string>
+				<key>Coinone</key>
+				<string>eth</string>
+				<key>Poloniex</key>
+				<string>BTC_ETH</string>
+				<key>Bittrex</key>
+				<string>BTC-ETH</string>
+				<key>Coincheck</key>
+				<string>eth_btc</string>
+				<key>Bitflyer</key>
+				<string>ETH_BTC</string>
+				<key>Okcoin</key>
+				<string>eth_cny</string>
+			</dict>
+		</dict>
+		<key>ETC</key>
+		<dict>
+			<key>tag</key>
+			<integer>3</integer>
+			<key>name</key>
+			<string>Ethereum Classic</string>
+			<key>mark</key>
+			<string>e9c2</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Korbit</key>
+				<string>etc_krw</string>
+				<key>Bithumb</key>
+				<string>etc</string>
+				<key>Coinone</key>
+				<string>etc</string>
+				<key>Poloniex</key>
+				<string>BTC_ETC</string>
+				<key>Bittrex</key>
+				<string>BTC-ETC</string>
+				<key>Coincheck</key>
+				<string>etc_btc</string>
+			</dict>
+		</dict>
+		<key>XRP</key>
+		<dict>
+			<key>tag</key>
+			<integer>4</integer>
+			<key>name</key>
+			<string>Ripple</string>
+			<key>mark</key>
+			<string>e93a</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Bithumb</key>
+				<string>xrp</string>
+				<key>Coinone</key>
+				<string>xrp</string>
+				<key>Poloniex</key>
+				<string>BTC_XRP</string>
+				<key>Bittrex</key>
+				<string>BTC-XRP</string>
+				<key>Coincheck</key>
+				<string>xrp_btc</string>
+			</dict>
+		</dict>
+		<key>STRAT</key>
+		<dict>
+			<key>tag</key>
+			<integer>5</integer>
+			<key>name</key>
+			<string>Stratis</string>
+			<key>mark</key>
+			<string>e916</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Poloniex</key>
+				<string>BTC_ETH</string>
+				<key>Bittrex</key>
+				<string>BTC-ETH</string>
+			</dict>
+		</dict>
+		<key>DGB</key>
+		<dict>
+			<key>tag</key>
+			<integer>6</integer>
+			<key>name</key>
+			<string>DigiByte</string>
+			<key>mark</key>
+			<string>e9b6</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Poloniex</key>
+				<string>BTC_DGB</string>
+				<key>Bittrex</key>
+				<string>BTC-DGB</string>
+			</dict>
+		</dict>
+		<key>SC</key>
+		<dict>
+			<key>tag</key>
+			<integer>7</integer>
+			<key>name</key>
+			<string>Siacoin</string>
+			<key>mark</key>
+			<string>e906</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Poloniex</key>
+				<string>BTC_SC</string>
+				<key>Bittrex</key>
+				<string>BTC-SC</string>
+			</dict>
+		</dict>
+		<key>XMR</key>
+		<dict>
+			<key>tag</key>
+			<integer>8</integer>
+			<key>name</key>
+			<string>Monero</string>
+			<key>mark</key>
+			<string>e936</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Poloniex</key>
+				<string>BTC_XMR</string>
+				<key>Bittrex</key>
+				<string>BTC-XMR</string>
+				<key>Coincheck</key>
+				<string>xmr_btc</string>
+			</dict>
+		</dict>
+		<key>ZEC</key>
+		<dict>
+			<key>tag</key>
+			<integer>9</integer>
+			<key>name</key>
+			<string>Zcash</string>
+			<key>mark</key>
+			<string>e9cf</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Poloniex</key>
+				<string>BTC_ZEC</string>
+				<key>Bittrex</key>
+				<string>BTC-ZEC</string>
+				<key>Coincheck</key>
+				<string>zec_btc</string>
+			</dict>
+		</dict>
+		<key>LTC</key>
+		<dict>
+			<key>tag</key>
+			<integer>10</integer>
+			<key>name</key>
+			<string>Litecoin</string>
+			<key>mark</key>
+			<string>e990</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Bithumb</key>
+				<string>ltc</string>
+				<key>Poloniex</key>
+				<string>BTC_ETH</string>
+				<key>Bittrex</key>
+				<string>BTC-ETH</string>
+				<key>Coincheck</key>
+				<string>ltc_btc</string>
+				<key>Okcoin</key>
+				<string>ltc_cny</string>
+			</dict>
+		</dict>
+		<key>DASH</key>
+		<dict>
+			<key>tag</key>
+			<integer>11</integer>
+			<key>name</key>
+			<string>Dash</string>
+			<key>mark</key>
+			<string>e9b3</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Bithumb</key>
+				<string>dash</string>
+				<key>Poloniex</key>
+				<string>BTC_DASH</string>
+				<key>Bittrex</key>
+				<string>BTC-DASH</string>
+				<key>Coincheck</key>
+				<string>dash_btc</string>
+			</dict>
+		</dict>
+		<key>STR</key>
+		<dict>
+			<key>tag</key>
+			<integer>12</integer>
+			<key>name</key>
+			<string>Stellar</string>
+			<key>mark</key>
+			<string>e915</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Poloniex</key>
+				<string>BTC_STR</string>
+			</dict>
+		</dict>
+		<key>XEM</key>
+		<dict>
+			<key>tag</key>
+			<integer>13</integer>
+			<key>name</key>
+			<string>NEM</string>
+			<key>mark</key>
+			<string>e935</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Poloniex</key>
+				<string>BTC_XEM</string>
+				<key>Bittrex</key>
+				<string>BTC-XEM</string>
+				<key>Coincheck</key>
+				<string>xem_btc</string>
+			</dict>
+		</dict>
+		<key>STEEM</key>
+		<dict>
+			<key>tag</key>
+			<integer>14</integer>
+			<key>name</key>
+			<string>Steem</string>
+			<key>mark</key>
+			<string>e912</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Poloniex</key>
+				<string>BTC_STEEM</string>
+				<key>Bittrex</key>
+				<string>BTC-STEEM</string>
+			</dict>
+		</dict>
+		<key>LSK</key>
+		<dict>
+			<key>tag</key>
+			<integer>15</integer>
+			<key>name</key>
+			<string>Lisk</string>
+			<key>mark</key>
+			<string>e98d</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Poloniex</key>
+				<string>BTC_LSK</string>
+				<key>Bittrex</key>
+				<string>BTC-LSK</string>
+				<key>Coincheck</key>
+				<string>lsk_btc</string>
+			</dict>
+		</dict>
+		<key>FCT</key>
+		<dict>
+			<key>tag</key>
+			<integer>16</integer>
+			<key>name</key>
+			<string>Factom</string>
+			<key>mark</key>
+			<string>e9c8</string>
+			<key>marketParams</key>
+			<dict>
+				<key>Poloniex</key>
+				<string>BTC_FCT</string>
+				<key>Bittrex</key>
+				<string>BTC-FCT</string>
+				<key>Coincheck</key>
+				<string>fct_btc</string>
+			</dict>
+		</dict>
+	</dict>
 </dict>
 </plist>
